crates/nanobot-core/tests/compile_fail/mint_key_outside_executor.rs
use nanobot_core::tools::executor::ExecutorMintKey;

fn main() {
    let _k = ExecutorMintKey(());
}
